--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my-app",
-  "homepage": "https://shailee0414.github.io/tvShow",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,20 +9,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-thunk": "^1.0.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
